# sidekick

./: DOCKERFILE  app.py  pyproject.toml  readme.md  sidekick.py  sidekick_tool.py  test.py
sandbox/: avengers.md  doomsday.md  spider.md  spiderman.md
