[project]
name = "sidekick"
version = "0.1.0"
description = "AI Sidekick Assistant built with LangGraph and Playwright"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "gradio>=5.22.0",
    "langchain==0.3.27",
    "langchain-community>=0.3.20",
    "langchain-experimental>=0.3.4",
    "langchain-groq>=0.3.8",
    "langchain-openai>=0.3.9",
    "langgraph>=0.3.18",
    "openai>=1.68.2",
    "playwright>=1.51.0",
    "pydantic>=2.10.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "resend>=2.30.1",
    "tavily>=1.1.0",
    "typing-extensions>=4.12.2",
    "wikipedia>=1.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
